chp12_ingress/set1223_multiple_rules/set1223_ingress_multiple_services.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiada
  namespace: chp12-set1223
spec:
  rules:
  - host: kiada.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kiada
            port:
              name: http
  - host: api.example.com
    http:
      paths:
      - path: /quote
        pathType: Exact
        backend:
          service:
            name: quote
            port:
              name: http
      - path: /questions
        pathType: Prefix
        backend:
          service:
            name: quiz
            port:
              name: http
